--- a/index.html
+++ b/index.html
@@ -1,34 +1,91 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sutton's Portfolio</title>
+  <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <header>
-        <h1>Sutton's Portfolio</h1>
-    </header>
-    <section>
-      <p>Still a work in progress, but I am building my portfolio :)</p>   
-    </section>
-    <section class="box">
-        <p id="box1">Image Placeholder 1</p>
-        <p id="box2">Image Placeholder 2</p>
-        <p id="box3">Image Placeholder 3</p>
-        <p id="box4">Image Placeholder 4</p>       
-    </section>
-    <section class="links">
-        <ul>
-          <li><a href="https://google.com">Email</a></li>
-          <li><a href="https://google.com">LinkedIn</a></li>
-          <li><a href="https://google.com">Github</a></li>
-        </ul>
-    </section>
-    <footer>
-        <h6>Another week down!</h6>
-    </footer>
-</body>
-</html>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kavoon&display=swap" rel="stylesheet">
+
+
+    <title>Week 2 Challenge</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Sutton Charpentier</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact Me
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="https://github.com">Github</a></li>
+                  <li><a class="dropdown-item" href="https://google.com">Email</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="https://linkedin.com">LinkedIn</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Coming Soon!</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 1</h5>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt animi voluptates ipsa a? Excepturi quos odio voluptates tempora, est unde accusantium quas. Modi dolorem reprehenderit vitae totam consequuntur sunt pariatur?</p>
+              <a href="#" class="btn btn-primary">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 2</h5>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt animi voluptates ipsa a? Excepturi quos odio voluptates tempora, est unde accusantium quas. Modi dolorem reprehenderit vitae totam consequuntur sunt pariatur?</p>
+              <a href="#" class="btn btn-primary">See Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 3</h5>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt animi voluptates ipsa a? Excepturi quos odio voluptates tempora, est unde accusantium quas. Modi dolorem reprehenderit vitae totam consequuntur sunt pariatur?</p>
+              <a href="#" class="btn btn-primary">See Project</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project 4</h5>
+              <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt animi voluptates ipsa a? Excepturi quos odio voluptates tempora, est unde accusantium quas. Modi dolorem reprehenderit vitae totam consequuntur sunt pariatur?</p>
+              <a href="#" class="btn btn-primary">See Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
